[package]
name = "discord-hooks-rs"
version = "0.1.0"
authors = ["Joey Hines <joey@ahines.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.116", features=["derive"] }
serde_json = "1.0"
failure = "0.1.8"

[dev-dependencies]
reqwest = {version = "0.10.8", features = ["blocking", "json"]}
chrono = "0.4.18"
dotenv = "0.15.0"